--- a/src/components/html/body/CardExperience.astro
+++ b/src/components/html/body/CardExperience.astro
@@ -45,7 +45,7 @@ function formatDate(date: string){
   </header>
   <p 
     transition:name="description-experience"
-    class="text-pretty text-_step1"
+    class="text-pretty text-_step1 line-clamp-[7] sm:line-clamp-4"
   >
     { description }
   </p>
