--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -7,7 +7,7 @@ import Button from "../components/ui/Button.astro";
 <Section section="footer" tag="footer">
   <footer>
     <Title title="Contacto" className="" />
-    <form action="">
+    <form>
       <div class="group">
         <label for="name">
           <input type="text" name="name" id="name" required placeholder=" " />
@@ -23,12 +23,11 @@ import Button from "../components/ui/Button.astro";
         <span>Correo Electrónico</span>
       </label>
       <label for="message">
-        <textarea name="message" id="message" required placeholder=" "/>
+        <textarea name="message" id="message" required placeholder=" "
+        ></textarea>
         <span>Mensaje</span>
       </label>
-      <Button className="w-full max-w-60 py-1" type="submit">
-        Enviar
-      </Button>
+      <Button className="w-full max-w-60 py-1" type="submit"> Enviar </Button>
     </form>
   </footer>
 </Section>
@@ -43,7 +42,7 @@ import Button from "../components/ui/Button.astro";
   }
 
   form textarea {
-    resize: none;    
+    resize: none;
   }
 
   form label {
@@ -73,7 +72,8 @@ import Button from "../components/ui/Button.astro";
       overflow: hidden;
     }
 
-    & input, textarea {
+    & input,
+    textarea {
       flex-grow: 1;
       color: var(--color-black);
       padding: 5px;
@@ -109,8 +109,67 @@ import Button from "../components/ui/Button.astro";
   @media (min-width: 768px) {
     form .group {
       flex-wrap: nowrap;
-      gap: .5rem;
+      gap: 0.5rem;
+    }
+  }
+</style>
+
+<script type="module">
+  const $form = document.querySelector("form");
+
+  async function sendEmail(content) {
+    try {
+      const response = await fetch(
+        "https://formsubmit.co/ajax/nestorignaciorg@gmail.com",
+        {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            Accept: "application/json",
+          },
+          body: JSON.stringify(content),
+        },
+      );
+
+      if (!response.ok) throw new Error("Ocurrio un error al enviar el correo");
+
+      const data = await response.json();
+      return {
+        data,
+        ok: true,
+      };
+    } catch (error) {
+      return {
+        ok: false,
+        message: error.message,
+      };
     }
   }
 
-</style>
+  const handleToast = ({ content }) => {
+    const customEvent = new CustomEvent('show-toast', {
+      detail: { content }
+    })
+    window.dispatchEvent(customEvent)
+  }
+
+  const $button = document.querySelector("button[type=submit]")
+
+  $form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    console.log("form");
+    
+    const form = new FormData(e.target);
+    const data = Object.fromEntries(form.entries());
+
+    $button.disabled = true
+    const response = await sendEmail(data);
+    const message = response.ok ? "¡Gracias por tu mensaje! Te respondere lo antes posible." : response.message
+    
+    $button.disabled = false
+    e.target.reset()
+    return handleToast({
+      content: message
+    })
+  });
+</script>
