--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -31,32 +31,32 @@ const experience: Experience[] = [
     slug: "egovf",
     images: [
       {
-        src: "/experience/egovf/home-desktop.png",
+        src: "https://github.com/ignaccio7/Nirodev/blob/master/public/experience/egovf/home-desktop.png?raw=true",
         alt: "home-desktop",
         device: "desktop",
       },
       {
-        src: "/experience/egovf/login-desktop.png",
+        src: "https://github.com/ignaccio7/Nirodev/blob/master/public/experience/egovf/login-desktop.png?raw=true",
         alt: "home-desktop",
         device: "desktop",
       },
       {
-        src: "/experience/egovf/login-mobile.png",
+        src: "https://github.com/ignaccio7/Nirodev/blob/master/public/experience/egovf/login-mobile.png?raw=true",
         alt: "home-desktop",
         device: "mobile",
       },
       {
-        src: "/experience/egovf/register-desktop.png",
+        src: "https://github.com/ignaccio7/Nirodev/blob/master/public/experience/egovf/register-desktop.png?raw=true",
         alt: "home-desktop",
         device: "desktop",
       },
       {
-        src: "/experience/egovf/register-mobile.png",
+        src: "https://github.com/ignaccio7/Nirodev/blob/master/public/experience/egovf/register-mobile.png?raw=true",
         alt: "home-desktop",
         device: "mobile",
       },
       {
-        src: "/experience/egovf/slider-desktop.png",
+        src: "https://github.com/ignaccio7/Nirodev/blob/master/public/experience/egovf/slider-desktop.png?raw=true",
         alt: "home-desktop",
         device: "desktop",
       },
@@ -66,8 +66,7 @@ const experience: Experience[] = [
 
 export const getStaticPaths = (() => {
   const experience = [
-    { params: { slug: "egovf" } },
-    { params: { slug: "google" } },
+    { params: { slug: "egovf" } }
   ];
 
   return experience;
