--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -157,7 +157,7 @@ import Button from "../components/ui/Button.astro";
 
   $form.addEventListener("submit", async (e) => {
     e.preventDefault();
-    console.log("form");
+    // console.log("form");
     
     const form = new FormData(e.target);
     const data = Object.fromEntries(form.entries());
