--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import { ClientRouter } from "astro:transitions";
-import Toast from "../components/ui/toast.astro";
+import Toast from "../components/ui/Toast.astro";
 ---
 
 <!doctype html>
@@ -15,8 +15,8 @@ import Toast from "../components/ui/toast.astro";
 	</head>
 	<body class="container">
 		<div class="fixed inset-0 z-[-2] h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
-		<slot />
 		<Toast content="Mensaje enviado correctamente" />
+		<slot />
 	</body>
 </html>
 
