upload link curri

--- a/src/sections/Doctype.astro
+++ b/src/sections/Doctype.astro
@@ -22,7 +22,7 @@ import Button from "../components/ui/Button.astro";
   <Social className="justify-center my-1 mb-2 sm:hidden" />
   <Button color="white" className="text-_step2 block sm:hidden mx-auto px-0 py-0">
     <a 
-      href="https://drive.google.com/file/d/14GO20o0DCBwz397RKIjNtrzHiKorvtAZ/view" 
+      href="https://drive.google.com/file/d/19pFRDgq0KcfbPk2wL-u6IZxVrGV0rVaF/view?usp=drive_link" 
       class="block w-full h-full !px-0 !py-0"
       target="_blank"
       rel="noopener noreferrer"
