--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,8 +11,8 @@ import Toast from "../components/ui/Toast.astro";
 		<meta name="generator" content={Astro.generator} />
 		<title>Niduga - Portfolio</title>
 		<link rel="canonical" href="https://nirodev.vercel.app/" />
-		<link rel="icon" type="image/svg+xml" href="https://github.com/ignaccio7/Nirodev/blob/master/public/favicon.svg" />
-		<link rel="favicon" href="https://github.com/ignaccio7/Nirodev/blob/master/public/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="favicon" href="/favicon.svg" />
 		<meta name="twitter:card" content="summary" />
 		<meta property="og:type" content="website" />
 		<meta
