fix swipe in experience

--- a/src/components/experience/Header.astro
+++ b/src/components/experience/Header.astro
@@ -3,6 +3,7 @@
 
 <header class="flex justify-between font-bold">
   <h1 class="text-greenColor">NIRODEV</h1>
-  <button onclick="window.history.back()" id="back"
-  class="text-blueColor">Volver</button>
+  <a href="/" class="text-blueColor">
+    Volver
+  </a>
 </header>
