--- a/src/sections/Head.astro
+++ b/src/sections/Head.astro
@@ -17,7 +17,7 @@ import Button from "../components/ui/Button.astro";
     Actualmente soy <Emphasis content="Tenico Superior" /> en <Emphasis content="Sistemas Informaticos"/> y estudiante de la carrera de <Emphasis content="Informática" />. Me apasiona el <Emphasis content="diseño y desarrollo web" />. Disfruto de construir y replicar sitios, además me gusta aprender nuevas tecnologías y compartir mis conocimientos con la comunidad.</p>
     <Button className="hidden sm:block px-0 py-0" color="head">
       <a 
-        href="https://drive.google.com/file/d/19pFRDgq0KcfbPk2wL-u6IZxVrGV0rVaF/view?usp=drive_link" 
+        href="https://drive.google.com/file/d/10d75LbMtTrs61MRlN-IpO1DmHpUwGwzo/view?usp=sharing" 
         class="block w-full h-full !px-4 !py-1"
         target="_blank"
         rel="noopener noreferrer"
