fix: fix description in experience

--- a/src/sections/Body/Experience.astro
+++ b/src/sections/Body/Experience.astro
@@ -8,7 +8,7 @@ const experience = [
     initialDate: "2025-02-01",
     endDate: "2025-08-31",
     company: "AGETIC",
-    position: "Responsable de DevOps y Automatización de Software",
+    position: "Asistente de DevOps y Automatización de Software",
     description: "Implementé pruebas de seguridad en sistemas institucionales con Caido y BurpSuite, alineando con estándares OWASP. Desarrollé la plataforma Formix para gestión de formularios con landings informativas y módulos de solicitudes. Integré dashboards estadísticos con Chart.js para visualizar métricas clave. Extendí funcionalidades en APIs NestJS, automatizando actualizaciones con Pulumi. Diseñé nuevos comandos en CLI Go para gestión de volúmenes NFS con Nomad. Implementé pruebas unitarias y refactoricé componentes para mejorar mantenibilidad y escalabilidad.",
     url: "",
     code: "",
@@ -18,7 +18,7 @@ const experience = [
     initialDate: "2024-07-08",
     endDate: "2024-12-13",
     company: "Facultad de Humanidades y Ciencias de la Educación",
-    position: "FrontEnd Developer",
+    position: "Asistente Desarrollador FrontEnd",
     description: "Desarrollo Frontend en Vuejs3, Web Services, implementación de contenedores Docker y Refactorización de nueva interfaz para el modulo de inicio Sistema Web EGOVF",
     url: 'https://svfhce.umsa.bo/',
     code: 'https://github.com/tic-fhce/egovf',
